kubernetes/torrent/plex/plex-local-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-plex
  name: kube-plex
  namespace: torrent
spec:
  ports:
  - name: http
    port: 32400
    nodePort: 32400
  selector:
    app: kube-plex
  type: NodePort
