kubernetes/torrent/plex/plex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: torrent
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: plex-torrent-volume
          persistentVolumeClaim:
            claimName: plex-torrent-claim
        - name: plex-data-volume
          persistentVolumeClaim:
            claimName: plex-data-claim
        - name: plex-transcode-volume
          persistentVolumeClaim:
            claimName: plex-transcode-claim
        - name: plex-config-volume
          persistentVolumeClaim:
            claimName: plex-config-claim
      containers:
      - name: plex
        image: plexinc/pms-docker
        ports:
        - name: http
          containerPort: 32400
          hostPort: 32400
        volumeMounts:
          - name: plex-torrent-volume
            mountPath: /torrent
          - name: plex-data-volume
            mountPath: /data
          - name: plex-transcode-volume
            mountPath: /transcode
          - name: plex-config-volume
            mountPath: /config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex
  name: plex
  namespace: torrent
spec:
  ports:
  - port: 80
    targetPort: 32400
  selector:
    app: plex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plexingress
  namespace: torrent
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: plex.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 80
  - host: plex.thuis
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: 80
